# project-2

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  design-system.html  justfile  test-schema.json
apps/api/: Cargo.toml
apps/api/docs/: better-auth-eval.md  docx-parsing-eval.md
apps/api/migrations/: 0001_create_users.sql  0002_create_sessions.sql  0003_create_templates.sql  0004_migrate_block_model_v2.sql  0005_create_stylesheets.sql  0006_create_template_versions.sql  0007_add_email_verified.sql  0008_create_email_verification_tokens.sql  0009_create_password_reset_tokens.sql  0010_create_oauth_accounts.sql  0011_create_mfa_tables.sql  0012_create_template_schemas.sql  0013_create_intent_mappings.sql  0014_schema_enums_to_text.sql
apps/api/src/: docx.rs  email.rs  error.rs  main.rs
apps/api/src/auth/: account.rs  handlers.rs  mfa.rs  middleware.rs  mod.rs  oauth.rs  reset.rs  session.rs  verification.rs
apps/api/src/schema/: extractor.rs  handlers.rs  mod.rs  resolver.rs  test_data.rs
apps/api/src/stylesheets/: handlers.rs  mod.rs
apps/api/src/templates/: handlers.rs  mod.rs
apps/web/: DESIGN.md  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: AppLayout.tsx  BlockCanvas.tsx  DataPane.tsx  PreviewPane.tsx  ProtectedRoute.tsx  RightPanel.tsx  StylesheetEditor.tsx  StylesheetEditorCompact.tsx  TopNav.tsx
apps/web/src/editor/: SectionNode.ts  (+3 more)
crates/typst-compiler/: Cargo.toml
crates/typst-compiler/docs/: wasm-findings.md
crates/typst-compiler/src/: compiler.rs  frontend_model.rs  lib.rs  model.rs  renderer.rs  wasm.rs
crates/typst-compiler/tests/: diagnostic_test.rs  render_test.rs
openspec/: config.yaml
openspec/changes/template-schema/: design.md  proposal.md  tasks.md
openspec/specs/account-settings/: spec.md
openspec/specs/authentication/: spec.md
openspec/specs/brand-rules/: spec.md
openspec/specs/document-import/: spec.md
openspec/specs/document-map/: spec.md
openspec/specs/email-verification/: spec.md
openspec/specs/google-oauth/: spec.md
openspec/specs/mfa/: spec.md
openspec/specs/password-reset/: spec.md
openspec/specs/pdf-rendering/: spec.md
openspec/specs/stylesheet/: spec.md
openspec/specs/stylesheet-editor/: spec.md
openspec/specs/template-canvas/: spec.md
openspec/specs/template-history/: spec.md
openspec/specs/wasm-preview/: spec.md
(+91 files in other folders)
